Fixed Teaser block elements order on small screens

--- a/PiranhaCms.PublicWeb/wwwroot/assets/css/style.css
+++ b/PiranhaCms.PublicWeb/wwwroot/assets/css/style.css
@@ -121,8 +121,12 @@ h6,
 }
 
 @media (max-width: 991.98px) {
-    .navbar-light .navbar-nav .nav-link  {
+    .navbar-light .navbar-nav .nav-link {
         padding: 10px 0;
+    }
+
+    .teaser-text {
+        order: 0 !important;
     }
 }
 
